add classes for client layer + refactoring

--- a/root/client/docker/rmq/Dockerfile
+++ b/root/client/docker/rmq/Dockerfile
@@ -4,6 +4,8 @@ ENV RABBITMQ_USER user
 ENV RABBITMQ_PASSWORD password
 
 ADD init.sh /init.sh
+ADD definitions.json /etc/rabbitmq
+ADD rabbitmq.conf /etc/rabbitmq
 EXPOSE 15672
 
 CMD ["/init.sh"]
