--- a/root/pom.xml
+++ b/root/pom.xml
@@ -9,8 +9,10 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>app</module>
         <module>client</module>
         <module>rest</module>
+        <module>utils</module>
     </modules>
 
     <properties>
