--- a/root/app/docker/server-node/Dockerfile
+++ b/root/app/docker/server-node/Dockerfile
@@ -1,7 +1,7 @@
 FROM anapsix/alpine-java
 MAINTAINER valera
 COPY app-1.0-SNAPSHOT-allinone.jar /home/node.jar
-ENV PORT=2553
-ENV ROLE=listener
+ENV PORT=2551
+ENV ROLE=dataProcessor
 EXPOSE $PORT
-CMD ["java","-jar","/home/node.jar", "$ROLE"]
+CMD java -jar /home/node.jar $ROLE
