--- a/root/pom.xml
+++ b/root/pom.xml
@@ -14,6 +14,16 @@
         <module>rest</module>
     </modules>
 
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>local-repo</id>
+            <name>Local Repository</name>
+            <url>file:///home/valera/.m2/repository</url>
+            <layout>default</layout>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
